UIP-1253 --> Un-openable sections shouldn't have the caret on the left
Change-Id: Iaad11248e2256466b07c226f5f08e81c0daae6f2

--- a/packages/ui-library/src/css/collapsible-section.scss
+++ b/packages/ui-library/src/css/collapsible-section.scss
@@ -61,6 +61,16 @@
             }
         }
     }
+    &.disable-expand {
+        .left:before, 
+        .right:after {
+            content: '';
+        }
+        .collapsible-section-title {
+            pointer-events: none;
+            cursor: default;
+        }
+    }
     &.open {
         > .collapsible-section-content {
             display: block;
