UIP-1259 : make max-height/scrolling behavior on expandable row content optional and default to not scroll (causing issues with DetailsTooltips)
Change-Id: I1ec20f34e3d2e9b5a070594e900dc2579c748d9e

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -70,9 +70,11 @@
                 right: 0;
             }
         }
-        .expanded-content-scroll {
-            max-height: 700px;
-            overflow-y: auto;
+        &.expanded-content-scroll {
+            .expanded-content-scroller {
+                max-height: 700px;
+                overflow-y: auto;
+            }
         }
         .item-title {
             font-size: 17px;
