UIP-1262 : make selectionFilterLabel count prop optional
Change-Id: I3170272d20420b66bfd22079562f112631324ef0

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -24,7 +24,7 @@
         &.details-content {
             display: block;
         }
-        .filter-container {
+        .selection-filter-label {
             &:after {
                 @include rotate(-180deg);
                 @include transition((all 0.2s linear));
@@ -303,7 +303,7 @@
             }
         }
         // filter bar
-        .filter-container {
+        .selection-filter-label {
             margin: 0;
             padding: 0 38px 0 15px;
             font-size: 13px;
