add base text alignment for custom select (looks bad when center aligned when not present
Change-Id: I25b1f3c838534715144f3947c0da8ff2c3255da3

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -803,12 +803,10 @@ input[type=file] {
 }
 
 .input-custom-select {
-    // prevent the highlighted child from overlapping the input border
-    padding: $borderSize;
-
+    padding: $borderSize; // prevent the highlighted child from overlapping the input border
     display: inline-block;
     vertical-align: top;
-
+    text-align: left;
     width: 190px; // default width
 
     &.open {
