UIP-1236, PA-7607 --> MultiDrag: Drag-n-Drop issues
Change-Id: Ie992840e23b0cc375349b7ff6c0527f17140b196

--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -58,6 +58,7 @@
     .rows-added {
         .items {
             position: relative;
+            padding-bottom: 50px;
         }
     }
     .items {
@@ -169,6 +170,7 @@
         }
         &.preview {
             border: 1px dotted $color-active-blue;
+            height: 49px;
         }
         &.item-disabled {
             background: $color-dolphin;
