UIP-1268 : change tooltips so that they remain visible on hover so links may be clicked
Change-Id: I861de221a5908d724fec10d0aa6422f74de3ad09

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -75,7 +75,20 @@
         vertical-align: baseline;
         cursor: pointer;
     }
+    .tooltip-text {
+        max-width: 400px;
+        pointer-events: auto !important;
+        @include opacity(1);
 
+        &:hover {
+            visibility: visible !important;
+            @include opacity(1);
+        }
+        a {
+            color: $color-white;
+            text-decoration: underline;
+        }
+    }
     &.warning {
         .__react_component_tooltip {
             @include bg-styles($color-critical-red);
