UIP-1254 Change handling of searchable dropdown, fix none option
Change-Id: Idee99531d5e2f6f8c0a301fd8708bfb869644d8f

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1040,6 +1040,10 @@ input[type=file] {
                 color: $color-rabbit-fur;
             }
         }
+        .none-option {
+            font-style: italic;
+            color: $color-elephant;
+        }
     }
     .selected-option,
     .select-option,
