--- a/packages/ui-library/src/css/globals.scss
+++ b/packages/ui-library/src/css/globals.scss
@@ -53,12 +53,13 @@ $color-black: #000;
 $color-white: #fff;
 $color-active-blue: #2996cc;
 $color-active-blue-option: #0069d9;
-$color-active-blue-highlighted: #3ea0d1;
+$color-active-blue-highlighted: tint($color-active-blue, 10%);
 $color-active-blue-inactive: #a9d5eb;
 $color-blue-grey: #9bacb4;
 $color-chilly: #e3eaed;
 $color-cinder-block: #e4e5e5;
 $color-critical-red: #ed3a03;
+$color-critical-red-highlighted: tint($color-critical-red, 10%);;
 $color-dolphin: #d8dbdc;
 $color-elephant: #929aa1;
 $color-elderly: #f4f7f9;
@@ -73,7 +74,8 @@ $color-slate: #3d454d;
 $color-sonic: #f0f6f7;
 $color-stone: #c2c3c4;
 $color-stratus: #bcbdbf;
-$color-success-green-highlighted: #4aba78;
+$color-success: #4aba78;
+$color-success-highlighted: tint($color-success, 10%);
 $color-success-green-inactive: #b1e2c5;
 $color-timberwolf: #e8ebed;
 $color-verde: #76cc99;
@@ -86,7 +88,6 @@ $color-warning-icon-yellow: #eeb91c;
 // REUSABLE SEMANTIC COLOR VARS (use color vars for all other colors or when semantic meaning does not apply)
 $color-text: $color-elephant;
 $color-active: $color-active-blue;
-$color-success: $color-success-green-highlighted;
 $color-input-fill: $color-sonic;
 $color-input-border: $color-rabbit-fur;
 $color-input-text: $color-midnight;
