--- a/packages/ui-library/src/css/mixins.scss
+++ b/packages/ui-library/src/css/mixins.scss
@@ -215,6 +215,16 @@
 }
 
 
+// COLOR ----------------------------------------------------------------------------------------
+
+@function tint($color, $percentage) {
+    @return mix(white, $color, $percentage);
+}
+
+@function shade($color, $percentage) {
+    @return mix(black, $color, $percentage);
+}
+
 
 // MISC --------------------------------------------------------------------------------------------
 
