add missing width to alert modal per reported issue from PID
Change-Id: I6510fad0a7cecc5787e9d4a3c02de652776fe8ff

--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -174,13 +174,12 @@
         }
     }
     &.alert {
-        $modal-width: 360px;
-
         .modal-header,
         .modal-body {
             border-width: 1px 1px 0;
             border-style: solid;
             border-color: $color-warning-icon-yellow;
+            width: 360px;
         }
         .modal-header {
             background: $color-warning-icon-yellow;
