UIP-1282 allow overflow from DDT cells
Change-Id: Id04d923b7a56ee09f9b34153bf5b194bbaa48b5e

--- a/packages/ui-library/src/css/reports.scss
+++ b/packages/ui-library/src/css/reports.scss
@@ -253,8 +253,10 @@
             }
             .td {
                 box-sizing: border-box;
-                overflow: hidden;
-                text-overflow: ellipsis;
+                word-wrap: break-word;
+                //this truncated text that overflowed. May be added back if detailstooltip chagnes to fixed position.
+                // overflow: hidden;
+                // text-overflow: ellipsis;
             }
         }
     }
