UIP-1313 : reporting style tweaks
Change-Id: Icadc9cdcb0af09d64b3e373534eff182a0a79a8e

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2827,6 +2827,13 @@ label {
             @include opacity(0);
         }
     }
+    &.align-inputs {
+        vertical-align: top;
+
+        .label-text {
+            margin-bottom: 20px;
+        }
+    }
 }
 
 .input-menu-button {
