UIP-1313 : add table title class shown in new mocks`
Change-Id: Ic176ae7bfe354232be44e4751bb37cd5ad933761

--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -266,6 +266,11 @@ table {
     }
 }
 
+.table-title {
+    font-size: 18px;
+    margin: 30px 0 10px 0;
+    color: $color-slate;
+}
 a.add-table-row {
     position: relative;
     display: inline-block;
