UIP-1322 : fix focus styling for native selects in FF (quickfix)
Change-Id: Ibeb19dedffd6d631e83da0c70c583d6f7df10fa8

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -19,15 +19,10 @@ select {
     &::-moz-selection {
         background: none; // prevents odd FF text selection on undo
     }
-    &:-moz-focusring {
-        color: transparent;
-        text-shadow: 0 0 0 $color-black;
-    }
 
     &::-ms-clear {
         display: none;
     }
-
     &::-ms-expand {
         display: none;
     }
@@ -766,6 +761,12 @@ input[type=file] {
                 background-color: $color-active-blue-option;
                 color: $color-white;
             }
+        }
+
+        // FF FIXES
+        &:-moz-focusring {
+            color: transparent;
+            text-shadow: 0 0 0 $color-black;
         }
     }
     &.ie9 {
